# device_board_beken

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  OAT.xml  README.md  README_zh.md
bk7235x/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  bk7235x_defconfig  ohos.build
bk7235x/hcs/: BUILD.gn  dev_config.hcs  device_info.hcs
bk7235x/hdf/: BUILD.gn
bk7235x/hdf/src/: bk_gpio_driver.c  bk_i2c_driver.c  bk_uart_driver.c  devmgr_loader.c
bk7235x/liteos_m/: BUILD.gn  Makefile  bk7235.ld  bk7235_ota.ld  build_sdk.sh  config.gni  get_libs.sh  pack.json
bk7235x/liteos_m/adapter/: BUILD.gn  entry.c  sdk_adapter.c
shields/: BUILD.gn  Kconfig.liteos_m.shields
