# Copyright (C) 2022 BEKEN .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
module_switch = defined(LOSCFG_BOARD_BK7235X)
kernel_module(module_name) {
  #deps = [ "$product_path/hdf_config:hdf_hcs" ]
}

declare_args() {
}

lite_subsystem("bk_sdk") {
  subsystem_components = [ ":cjson" ]
}

lite_component("cjson") {
  features = []

  deps = [
    "//build/lite/config/component/cJSON:cjson_static",
  ]
}

build_ext_component("run_wifiiot_scons") {
  exec_path = rebase_path(".",root_build_dir)
  outdir = rebase_path(root_out_dir)
  command = "sh build_sdk.sh $outdir"
  deps = [
    "//device/soc/beken/bk7235/hals/communication/wifi_lite/wifiservice:wifiservice",
    "//build/lite:ohos",
    "adapter"
  ]
}
