# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = ""

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = "rv32imac"

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toolchain.
board_toolchain = "riscv32-unknown-elf"

# The toolchain path installed, it's not mandatory if you have added toolchain path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "riscv32-unknown-elf-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# config.json parse
if (product_path != "") {
  product_conf = read_file("${product_path}/config.json", "json")
  product_name = product_conf.product_name
  xts_list = product_conf.xts_list
  tests_list = product_conf.tests_list
}
# Board related common compile flags.
board_cflags = [
  "-std=c99",
  "-mstrict-align",
  "-Wl,--gc-sections",
  "-ffunction-sections",
  "-fdata-sections",
  "-D__LITEOS__",
  "-DCFG_SUPPORT_LITEOS",
  "-DBEKEN_PLATFORM",
  "-Wno-strict-prototypes",
  "-Wno-parentheses",

]
board_cxx_flags = board_cflags
board_ld_flags = []
board_asmflags = []

beken_chip_type = "bk7235"
soc_company = "beken"
beken_sdk_dir = "${ohos_root_path}/device/soc/${soc_company}/${beken_chip_type}/liteos_m/bk_sdk_armino"
extra_include_dir = "${ohos_root_path}/device/soc/${soc_company}/${beken_chip_type}/liteos_m/inc"

# Board related headfiles search path.
board_include_dirs = [
  "${extra_include_dir}",  
  "${ohos_root_path}utils/native/lite/include",  
  "${ohos_root_path}third_party/bounds_checking_function/include",
  "${ohos_root_path}kernel/liteos_m/config",
  "${ohos_root_path}kernel/liteos_m/kal/cmsis",
  "${ohos_root_path}kernel/liteos_m/utils",
  "${ohos_root_path}kernel/liteos_m/components/cpup",
  "${ohos_root_path}kernel/liteos_m/components/power",
  "${ohos_root_path}kernel/liteos_m/kernel/include",
  "${ohos_root_path}kernel/liteos_m/arch/include",
  "${ohos_root_path}kernel/liteos_m/arch/risc-v/riscv32/gcc",
  "${ohos_root_path}kernel/liteos_m/arch/risc-v/riscv32/gcc/asm",
  "${ohos_root_path}third_party/musl/porting/liteos_m/kernel/include",

  "${beken_sdk_dir}/build/openharmony/${beken_chip_type}/config",

]

# Board adapter dir for OHOS components.
board_adapter_dir = "${ohos_root_path}device/soc/${soc_company}/${beken_chip_type}"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
